--- a/module1-regression-1/LS_DS_211_assignment.ipynb
+++ b/module1-regression-1/LS_DS_211_assignment.ipynb
@@ -49,7 +49,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import scikit-learn LR\n",
+    "\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn import metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -75,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -91,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -318,29 +330,20 @@
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# inspect head \n",
+    "\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import scikit-learn LR\n",
-    "\n",
-    "from sklearn.linear_model import LinearRegression"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +352,7 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +389,7 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +411,7 @@
        "array([4827.73665176])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -448,6 +451,329 @@
     "    return result + '\\n' + explanation\n",
     "\n",
     "print(predict(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "low       33947\n",
+       "medium    11181\n",
+       "high       3690\n",
+       "Name: interest_level, dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# stretch goal: 2 features\n",
+    "# let's do it with interest level\n",
+    "\n",
+    "df[\"interest_level\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bathrooms</th>\n",
+       "      <th>bedrooms</th>\n",
+       "      <th>created</th>\n",
+       "      <th>description</th>\n",
+       "      <th>display_address</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>price</th>\n",
+       "      <th>street_address</th>\n",
+       "      <th>interest_level</th>\n",
+       "      <th>...</th>\n",
+       "      <th>high_speed_internet</th>\n",
+       "      <th>balcony</th>\n",
+       "      <th>swimming_pool</th>\n",
+       "      <th>new_construction</th>\n",
+       "      <th>terrace</th>\n",
+       "      <th>exclusive</th>\n",
+       "      <th>loft</th>\n",
+       "      <th>garden_patio</th>\n",
+       "      <th>wheelchair_access</th>\n",
+       "      <th>common_outdoor_space</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2016-06-24 07:54:24</td>\n",
+       "      <td>A Brand New 3 Bedroom 1.5 bath ApartmentEnjoy ...</td>\n",
+       "      <td>Metropolitan Avenue</td>\n",
+       "      <td>40.7145</td>\n",
+       "      <td>-73.9425</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>792 Metropolitan Avenue</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2016-06-12 12:19:27</td>\n",
+       "      <td></td>\n",
+       "      <td>Columbus Avenue</td>\n",
+       "      <td>40.7947</td>\n",
+       "      <td>-73.9667</td>\n",
+       "      <td>5465</td>\n",
+       "      <td>808 Columbus Avenue</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2016-04-17 03:26:41</td>\n",
+       "      <td>Top Top West Village location, beautiful Pre-w...</td>\n",
+       "      <td>W 13 Street</td>\n",
+       "      <td>40.7388</td>\n",
+       "      <td>-74.0018</td>\n",
+       "      <td>2850</td>\n",
+       "      <td>241 W 13 Street</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2016-04-18 02:22:02</td>\n",
+       "      <td>Building Amenities - Garage - Garden - fitness...</td>\n",
+       "      <td>East 49th Street</td>\n",
+       "      <td>40.7539</td>\n",
+       "      <td>-73.9677</td>\n",
+       "      <td>3275</td>\n",
+       "      <td>333 East 49th Street</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2016-04-28 01:32:41</td>\n",
+       "      <td>Beautifully renovated 3 bedroom flex 4 bedroom...</td>\n",
+       "      <td>West 143rd Street</td>\n",
+       "      <td>40.8241</td>\n",
+       "      <td>-73.9493</td>\n",
+       "      <td>3350</td>\n",
+       "      <td>500 West 143rd Street</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 34 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   bathrooms  bedrooms              created  \\\n",
+       "0        1.5         3  2016-06-24 07:54:24   \n",
+       "1        1.0         2  2016-06-12 12:19:27   \n",
+       "2        1.0         1  2016-04-17 03:26:41   \n",
+       "3        1.0         1  2016-04-18 02:22:02   \n",
+       "4        1.0         4  2016-04-28 01:32:41   \n",
+       "\n",
+       "                                         description      display_address  \\\n",
+       "0  A Brand New 3 Bedroom 1.5 bath ApartmentEnjoy ...  Metropolitan Avenue   \n",
+       "1                                                         Columbus Avenue   \n",
+       "2  Top Top West Village location, beautiful Pre-w...          W 13 Street   \n",
+       "3  Building Amenities - Garage - Garden - fitness...     East 49th Street   \n",
+       "4  Beautifully renovated 3 bedroom flex 4 bedroom...    West 143rd Street   \n",
+       "\n",
+       "   latitude  longitude  price           street_address  interest_level  ...  \\\n",
+       "0   40.7145   -73.9425   3000  792 Metropolitan Avenue               1  ...   \n",
+       "1   40.7947   -73.9667   5465      808 Columbus Avenue               0  ...   \n",
+       "2   40.7388   -74.0018   2850          241 W 13 Street               2  ...   \n",
+       "3   40.7539   -73.9677   3275     333 East 49th Street               0  ...   \n",
+       "4   40.8241   -73.9493   3350    500 West 143rd Street               0  ...   \n",
+       "\n",
+       "   high_speed_internet  balcony  swimming_pool  new_construction  terrace  \\\n",
+       "0                    0        0              0                 0        0   \n",
+       "1                    0        0              0                 0        0   \n",
+       "2                    0        0              0                 0        0   \n",
+       "3                    0        0              0                 0        0   \n",
+       "4                    0        0              0                 0        0   \n",
+       "\n",
+       "   exclusive  loft  garden_patio  wheelchair_access  common_outdoor_space  \n",
+       "0          0     0             0                  0                     0  \n",
+       "1          0     0             0                  0                     0  \n",
+       "2          0     0             0                  0                     0  \n",
+       "3          0     0             0                  0                     0  \n",
+       "4          0     0             0                  0                     0  \n",
+       "\n",
+       "[5 rows x 34 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "interest_map = {\"low\": 0, \"medium\": 1, \"high\": 2}\n",
+    "\n",
+    "df = df.replace(interest_map)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = LinearRegression()\n",
+    "\n",
+    "features = [\"bedrooms\", \"interest_level\"]\n",
+    "target = \"price\"\n",
+    "\n",
+    "model.fit(df[features], df[target])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "254.96514308083079"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_absolute_error\n",
+    "\n",
+    "# try to determine mae for 3 bedrooms and medium interest\n",
+    "\n",
+    "prices = df[(df[\"bedrooms\"] == 3) & (df[\"interest_level\"] == 1)][\"price\"].mean()\n",
+    "mean_absolute_error(model.predict([[3, 1]]), [prices])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "936.2708679714791"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# determine mae in general\n",
+    "mean_absolute_error(model.predict(df[[\"bedrooms\", \"interest_level\"]]), df[\"price\"])"
    ]
   },
   {
