end of day progress

--- a/module4-logistic-regression/LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_214_assignment.ipynb
@@ -57,10 +57,10 @@
         "\n",
         "- [x] Do train/validate/test split. Train on reviews from 2016 & earlier. Validate on 2017. Test on 2018 & later.\n",
         "- [X] Begin with baselines for classification.\n",
-        "- [ ] Use scikit-learn for logistic regression.\n",
-        "- [ ] Get your model's validation accuracy. (Multiple times if you try multiple iterations.)\n",
-        "- [ ] Get your model's test accuracy. (One time, at the end.)\n",
-        "- [ ] Commit your notebook to your fork of the GitHub repo.\n",
+        "- [x] Use scikit-learn for logistic regression.\n",
+        "- [x] Get your model's validation accuracy. (Multiple times if you try multiple iterations.)\n",
+        "- [x] Get your model's test accuracy. (One time, at the end.)\n",
+        "- [x] Commit your notebook to your fork of the GitHub repo.\n",
         "\n",
         "\n",
         "## Stretch Goals\n",
@@ -198,75 +198,89 @@
       "metadata": {
         "id": "jT4_zL0WDfWm",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "outputId": "a5e5c590-7c1a-4c4b-ef3d-c20bb1e756ac"
       },
       "source": [
         "df.dtypes"
       ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "sTDbIZeeD4Mi",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# seems like these would leak because the overall rating should be a \n",
-        "# linear equation of theese two and thats not what im going for\n",
-        "print(\"Google reviews\\n\",df['Google'].value_counts())\n",
-        "print(\"Yelp reviews\\n\",df['Yelp'].value_counts())\n",
-        "df=df.drop(['Google','Yelp'],axis=1)\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "5x_gpmD_E5mJ",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "71897093-89ba-49b2-cdb3-4461f4ff371b"
-      },
-      "source": [
-        "# there is a really high corrilation to the 'Synergy' feature\n",
-        "# this suggest that these features are fundementally linked so i'm going to drop 'Synergy'\n",
-        "df['Synergy'].corr(df['Great'])"
-      ],
-      "execution_count": 95,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.6271370426734448"
+              "Burrito            object\n",
+              "Date               object\n",
+              "Yelp              float64\n",
+              "Google            float64\n",
+              "Chips              object\n",
+              "Cost              float64\n",
+              "Hunger            float64\n",
+              "Mass (g)          float64\n",
+              "Density (g/mL)    float64\n",
+              "Length            float64\n",
+              "Circum            float64\n",
+              "Volume            float64\n",
+              "Tortilla          float64\n",
+              "Temp              float64\n",
+              "Meat              float64\n",
+              "Fillings          float64\n",
+              "Meat:filling      float64\n",
+              "Uniformity        float64\n",
+              "Salsa             float64\n",
+              "Synergy           float64\n",
+              "Wrap              float64\n",
+              "Unreliable         object\n",
+              "NonSD              object\n",
+              "Beef               object\n",
+              "Pico               object\n",
+              "Guac               object\n",
+              "Cheese             object\n",
+              "Fries              object\n",
+              "Sour cream         object\n",
+              "Pork               object\n",
+              "Chicken            object\n",
+              "Shrimp             object\n",
+              "Fish               object\n",
+              "Rice               object\n",
+              "Beans              object\n",
+              "Lettuce            object\n",
+              "Tomato             object\n",
+              "Bell peper         object\n",
+              "Carrots            object\n",
+              "Cabbage            object\n",
+              "Sauce              object\n",
+              "Salsa.1            object\n",
+              "Cilantro           object\n",
+              "Onion              object\n",
+              "Taquito            object\n",
+              "Pineapple          object\n",
+              "Ham                object\n",
+              "Chile relleno      object\n",
+              "Nopales            object\n",
+              "Lobster            object\n",
+              "Queso             float64\n",
+              "Egg                object\n",
+              "Mushroom           object\n",
+              "Bacon              object\n",
+              "Sushi              object\n",
+              "Avocado            object\n",
+              "Corn               object\n",
+              "Zucchini           object\n",
+              "Great                bool\n",
+              "dtype: object"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 95
+          "execution_count": 7
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "W080iNhWIx6X",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "df=df.drop('Synergy',axis=1)"
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -285,9 +299,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 969
+          "height": 1000
         },
-        "outputId": "be5837c4-f9f1-46b3-fc01-542f65a94968"
+        "outputId": "596fc48a-2547-444d-8be7-91a662dd6602"
       },
       "source": [
         "def print_missing():\n",
@@ -300,13 +314,15 @@
         "  return None\n",
         "print_missing()"
       ],
-      "execution_count": 97,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Column Burrito has a missing value ratio of 0.0\n",
             "Column Date has a missing value ratio of 0.0\n",
+            "Column Yelp is missing 79.3349% of it's values and is a good canidate for imputing or dropping\n",
+            "Column Google is missing 79.3349% of it's values and is a good canidate for imputing or dropping\n",
             "Column Chips is missing 93.8242% of it's values and is a good canidate for imputing or dropping\n",
             "Column Cost has a missing value ratio of 1.6627\n",
             "Column Hunger has a missing value ratio of 0.7126\n",
@@ -322,6 +338,7 @@
             "Column Meat:filling has a missing value ratio of 2.1378\n",
             "Column Uniformity has a missing value ratio of 0.4751\n",
             "Column Salsa has a missing value ratio of 5.9382\n",
+            "Column Synergy has a missing value ratio of 0.4751\n",
             "Column Wrap has a missing value ratio of 0.7126\n",
             "Column Unreliable is missing 92.1615% of it's values and is a good canidate for imputing or dropping\n",
             "Column NonSD is missing 98.3373% of it's values and is a good canidate for imputing or dropping\n",
@@ -424,20 +441,22 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 901
+          "height": 952
         },
-        "outputId": "82054476-7f9a-496f-ae7b-2d4f7fd00f68"
+        "outputId": "f37ee666-8a06-4a4c-b967-c4ae7ac55087"
       },
       "source": [
         "print_missing()"
       ],
-      "execution_count": 100,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Column Burrito has a missing value ratio of 0.0\n",
             "Column Date has a missing value ratio of 0.0\n",
+            "Column Yelp has a missing value ratio of 0.0\n",
+            "Column Google has a missing value ratio of 0.0\n",
             "Column Cost has a missing value ratio of 1.6627\n",
             "Column Hunger has a missing value ratio of 0.7126\n",
             "Column Length is missing 32.7791% of it's values and is a good canidate for imputing or dropping\n",
@@ -450,6 +469,7 @@
             "Column Meat:filling has a missing value ratio of 2.1378\n",
             "Column Uniformity has a missing value ratio of 0.4751\n",
             "Column Salsa has a missing value ratio of 5.9382\n",
+            "Column Synergy has a missing value ratio of 0.0\n",
             "Column Wrap has a missing value ratio of 0.7126\n",
             "Column Unreliable has a missing value ratio of 0.0\n",
             "Column NonSD has a missing value ratio of 0.0\n",
@@ -546,13 +566,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 326
         },
-        "outputId": "b2098642-4361-4e7d-8352-952287c4e2de"
+        "outputId": "cf2d4570-4c51-4704-f32d-a556da11c7ce"
       },
       "source": [
         "# take a look at what we have\n",
         "train.head()"
       ],
-      "execution_count": 102,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -578,6 +598,8 @@
               "      <th></th>\n",
               "      <th>Burrito</th>\n",
               "      <th>Date</th>\n",
+              "      <th>Yelp</th>\n",
+              "      <th>Google</th>\n",
               "      <th>Cost</th>\n",
               "      <th>Hunger</th>\n",
               "      <th>Length</th>\n",
@@ -590,6 +612,7 @@
               "      <th>Meat:filling</th>\n",
               "      <th>Uniformity</th>\n",
               "      <th>Salsa</th>\n",
+              "      <th>Synergy</th>\n",
               "      <th>Wrap</th>\n",
               "      <th>Unreliable</th>\n",
               "      <th>NonSD</th>\n",
@@ -635,6 +658,8 @@
               "      <th>0</th>\n",
               "      <td>California</td>\n",
               "      <td>2016-01-18</td>\n",
+              "      <td>False</td>\n",
+              "      <td>False</td>\n",
               "      <td>6.49</td>\n",
               "      <td>3.0</td>\n",
               "      <td>NaN</td>\n",
@@ -647,6 +672,7 @@
               "      <td>4.0</td>\n",
               "      <td>4.0</td>\n",
               "      <td>4.0</td>\n",
+              "      <td>False</td>\n",
               "      <td>4.0</td>\n",
               "      <td>False</td>\n",
               "      <td>False</td>\n",
@@ -690,6 +716,8 @@
               "      <th>1</th>\n",
               "      <td>California</td>\n",
               "      <td>2016-01-24</td>\n",
+              "      <td>False</td>\n",
+              "      <td>False</td>\n",
               "      <td>5.45</td>\n",
               "      <td>3.5</td>\n",
               "      <td>NaN</td>\n",
@@ -702,6 +730,7 @@
               "      <td>2.0</td>\n",
               "      <td>4.0</td>\n",
               "      <td>3.5</td>\n",
+              "      <td>False</td>\n",
               "      <td>5.0</td>\n",
               "      <td>False</td>\n",
               "      <td>False</td>\n",
@@ -745,6 +774,8 @@
               "      <th>2</th>\n",
               "      <td>Carnitas</td>\n",
               "      <td>2016-01-24</td>\n",
+              "      <td>False</td>\n",
+              "      <td>False</td>\n",
               "      <td>4.85</td>\n",
               "      <td>1.5</td>\n",
               "      <td>NaN</td>\n",
@@ -757,6 +788,7 @@
               "      <td>4.5</td>\n",
               "      <td>4.0</td>\n",
               "      <td>3.0</td>\n",
+              "      <td>False</td>\n",
               "      <td>5.0</td>\n",
               "      <td>False</td>\n",
               "      <td>False</td>\n",
@@ -800,6 +832,8 @@
               "      <th>3</th>\n",
               "      <td>Asada</td>\n",
               "      <td>2016-01-24</td>\n",
+              "      <td>False</td>\n",
+              "      <td>False</td>\n",
               "      <td>5.25</td>\n",
               "      <td>2.0</td>\n",
               "      <td>NaN</td>\n",
@@ -812,6 +846,7 @@
               "      <td>4.0</td>\n",
               "      <td>5.0</td>\n",
               "      <td>4.0</td>\n",
+              "      <td>False</td>\n",
               "      <td>5.0</td>\n",
               "      <td>False</td>\n",
               "      <td>False</td>\n",
@@ -855,6 +890,8 @@
               "      <th>4</th>\n",
               "      <td>California</td>\n",
               "      <td>2016-01-27</td>\n",
+              "      <td>False</td>\n",
+              "      <td>False</td>\n",
               "      <td>6.59</td>\n",
               "      <td>4.0</td>\n",
               "      <td>NaN</td>\n",
@@ -867,6 +904,7 @@
               "      <td>4.5</td>\n",
               "      <td>5.0</td>\n",
               "      <td>2.5</td>\n",
+              "      <td>False</td>\n",
               "      <td>4.0</td>\n",
               "      <td>False</td>\n",
               "      <td>False</td>\n",
@@ -911,20 +949,20 @@
               "</div>"
             ],
             "text/plain": [
-              "      Burrito       Date  Cost  Hunger  ...  Avocado   Corn  Zucchini  Great\n",
-              "0  California 2016-01-18  6.49     3.0  ...    False  False     False  False\n",
-              "1  California 2016-01-24  5.45     3.5  ...    False  False     False  False\n",
-              "2    Carnitas 2016-01-24  4.85     1.5  ...    False  False     False  False\n",
-              "3       Asada 2016-01-24  5.25     2.0  ...    False  False     False  False\n",
-              "4  California 2016-01-27  6.59     4.0  ...    False  False     False   True\n",
+              "      Burrito       Date   Yelp  Google  ...  Avocado   Corn  Zucchini  Great\n",
+              "0  California 2016-01-18  False   False  ...    False  False     False  False\n",
+              "1  California 2016-01-24  False   False  ...    False  False     False  False\n",
+              "2    Carnitas 2016-01-24  False   False  ...    False  False     False  False\n",
+              "3       Asada 2016-01-24  False   False  ...    False  False     False  False\n",
+              "4  California 2016-01-27  False   False  ...    False  False     False   True\n",
               "\n",
-              "[5 rows x 52 columns]"
+              "[5 rows x 55 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 102
+          "execution_count": 13
         }
       ]
     },
@@ -981,7 +1019,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 642
         },
-        "outputId": "c22d842d-ff60-430f-e767-05660bd5896e"
+        "outputId": "6e52845b-73aa-4a66-c5f1-efa779def1e3"
       },
       "source": [
         "# time to establish a baseline\n",
@@ -1010,7 +1048,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 141,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -1056,7 +1094,6 @@
       },
       "source": [
         "from sklearn.metrics import accuracy_score\n",
-        "from sklearn.feature_selection import SelectKBest,f_classif\n",
         "from sklearn.linear_model import LogisticRegression\n",
         "\n",
         "# make feature sets\n",
@@ -1071,12 +1108,78 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "S-YABqHwcURw",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "cb823893-f2b1-48f1-f63d-e4f4ed0b5a2e"
+      },
+      "source": [
+        "# init\n",
+        "model=LogisticRegression(solver='lbfgs',max_iter=1000,random_state=42)\n",
+        "# fit\n",
+        "model.fit(X_train_imputed,y_train)\n",
+        "# predict and score training and validation accuracy\n",
+        "y_pred=model.predict(X_train_imputed)\n",
+        "acc=accuracy_score(y_pred=y_pred,y_true=y_train)\n",
+        "print(f\"TRAINING ACCURACY:{acc}\")\n",
+        "y_pred=model.predict(X_validate_imputed)\n",
+        "acc=accuracy_score(y_pred=y_pred,y_true=y_validate)\n",
+        "print(f\"VALIDATION ACCURACY:{acc}\")"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "TRAINING ACCURACY:0.8993288590604027\n",
+            "VALIDATION ACCURACY:0.8235294117647058\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "tOpSnKmf4kyN",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "e01afaeb-54fc-4e97-f116-544d35f475f8"
+      },
+      "source": [
+        "# test model\n",
+        "X_test=test.drop(['Burrito','Great','Date'],axis=1)\n",
+        "X_test_imputed=imputer.transform(X_test)\n",
+        "y_pred=model.predict(X_test_imputed)\n",
+        "acc=accuracy_score(y_true=y_test,y_pred=y_pred)\n",
+        "print(f\"TESTING SCORE:{acc}\")"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "TESTING SCORE:0.7777777777777778\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YVCAXoB1a_Z5",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "model=LogisticRegression()"
+        ""
       ],
       "execution_count": 0,
       "outputs": []
