--- a/module4-logistic-regression/LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_214_assignment.ipynb
@@ -1179,6 +1179,22 @@
         "colab": {}
       },
       "source": [
+        "# mock export results for kaggle\n",
+        "export=pd.DataFrame(data=y_pred,index=test.index,columns=['Great'])\n",
+        "export.reset_index(inplace=True)\n",
+        "export.to_csv('submission.csv',index=False)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CyDXdGfy3OfR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         ""
       ],
       "execution_count": 0,
